tests/baselines/reference/unreachableEnum(preserveconstenums=false).errors.txt
unreachableEnum.ts(4,17): error TS2450: Enum 'EnumA' used before its declaration.
unreachableEnum.ts(14,5): error TS7027: Unreachable code detected.
unreachableEnum.ts(21,17): error TS2450: Enum 'EnumA' used before its declaration.
unreachableEnum.ts(29,5): error TS7027: Unreachable code detected.


==== unreachableEnum.ts (4 errors) ====
    function func1() {
        aFunc();
    
        console.log(EnumA.Value);
                    ~~~~~
!!! error TS2450: Enum 'EnumA' used before its declaration.
!!! related TS2728 unreachableEnum.ts:14:10: 'EnumA' is declared here.
        console.log(EnumB.Value);
    
        return;
    
        function aFunc() {
            console.log(EnumA.Value);
            console.log(EnumB.Value);
        }
    
        enum EnumA { Value }
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
        const enum EnumB { Value }
    }
    
    function func2() {
        aFunc();
    
        console.log(EnumA.Value);
                    ~~~~~
!!! error TS2450: Enum 'EnumA' used before its declaration.
!!! related TS2728 unreachableEnum.ts:29:10: 'EnumA' is declared here.
    
        return;
    
        function aFunc() {
            console.log(EnumA.Value);
        }
    
        enum EnumA { Value }
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function func3() {
        aFunc();
    
        console.log(EnumB.Value);
    
        return;
    
        function aFunc() {
            console.log(EnumB.Value);
        }
    
        const enum EnumB { Value }
    }